[project]
name = "leaf-shape-tool"
version = "0.9.0-alpha"

requires-python = ">=3.11, <3.13"
authors = [
  { name = "Maple", email = "maplenavy@synology.me" }
]
maintainers = [
  {name = "Maple", email = "maplenavy@synology.me"}
]
description = "A napari-based GUI for leaf shape analysis"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["morphometrics", "elliptic fourier analysis", "leaf shape", "napari"]

dependencies = [
    "napari==0.6.6",
    "PyQt6>=6.6.0",
    "numpy==2.2.6",
    "opencv-python",
    "scikit-image",
    "scipy",
    "pyinstaller==6.16.0",
    "torch==2.8.0",
    "torchvision",
]

[project.scripts]
leaf-shape-tool = "leaf_shape_tool.main:main"

[tool.setuptools.packages.find]
where = ["src"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "alabaster==1.0.0",
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "app-model==0.4.0",
    "appdirs==1.4.4",
    "appnope==0.1.4 ; sys_platform == 'darwin'",
    "asttokens==3.0.0",
    "attrs==25.4.0",
    "babel==2.17.0",
    "build==1.3.0",
    "cachey==0.2.1",
    "certifi==2025.10.5",
    "cffi==2.0.0 ; implementation_name == 'pypy'",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "cloudpickle==3.1.1",
    "colorama==0.4.6 ; (os_name != 'nt' and sys_platform == 'win32') or (os_name == 'nt' and sys_platform != 'darwin' and sys_platform != 'linux')",
    "comm==0.2.3",
    "dask==2025.10.0",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "docstring-parser==0.17.0",
    "docutils==0.21.2",
    "executing==2.2.1",
    "flexcache==0.3",
    "flexparser==0.4",
    "freetype-py==2.5.1",
    "fsspec==2025.10.0",
    "heapdict==1.0.1",
    "hsluv==5.0.4",
    "idna==3.11",
    "imageio==2.37.0",
    "imagesize==1.4.1",
    "importlib-metadata==8.7.0 ; python_full_version < '3.12'",
    "in-n-out==0.2.1",
    "ipykernel==6.31.0",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "leaf-shape-tool",
    "locket==1.0.0",
    "macholib==1.16.3 ; sys_platform == 'darwin'",
    "magicgui==0.10.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "napari==0.6.6",
    "napari-console==0.1.4",
    "napari-plugin-engine==0.2.0",
    "napari-svg==0.2.1",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "npe2==0.7.9",
    "numpy==2.2.6",
    "numpydoc==1.9.0",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "partd==1.4.2",
    "pefile==2023.2.7 ; sys_platform == 'win32'",
    "pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pillow==12.0.0",
    "pint==0.25",
    "platformdirs==4.5.0",
    "pooch==1.8.2",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.2",
    "psygnal==0.15.0",
    "ptyprocess==0.7.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
    "pure-eval==0.2.3",
    "pyconify==0.2.1",
    "pycparser==2.23 ; implementation_name == 'pypy'",
    "pydantic==2.12.3",
    "pydantic-compat==0.1.2",
    "pydantic-core==2.41.4",
    "pygments==2.19.2",
    "pyinstaller==6.16.0",
    "pyinstaller-hooks-contrib==2025.9",
    "pyopengl==3.1.10",
    "pyproject-hooks==1.2.0",
    "pyqt6==6.10.0",
    "pyqt6-qt6==6.10.0",
    "pyqt6-sip==13.10.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==311 ; sys_platform == 'win32'",
    "pywin32-ctypes==0.2.3 ; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "qtconsole==5.7.0",
    "qtpy==2.4.3",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "roman-numerals-py==3.1.0",
    "rpds-py==0.28.0",
    "scikit-image==0.25.2",
    "scipy==1.16.3",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "snowballstemmer==3.0.1",
    "sphinx==8.2.3",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "stack-data==0.6.3",
    "superqt==0.7.6",
    "tifffile==2025.10.16",
    "tomli-w==1.2.0",
    "toolz==1.1.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "vispy==0.15.2",
    "wcwidth==0.2.14",
    "wrapt==2.0.0",
    "zipp==3.23.0 ; python_full_version < '3.12'",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
leaf-shape-tool = { workspace = true }
