[project]
name = "leaf-contour-efd"
version = "1.0.0"

requires-python = ">=3.11, <3.13"
authors = [
  { name = "Maple", email = "maplenavy@synology.me" }
]
maintainers = [
  {name = "Maple", email = "maplenavy@synology.me"}
]
description = "A napari-based GUI for leaf shape analysis"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["morphometrics", "elliptic fourier analysis", "leaf shape", "napari"]

dependencies = [
    "napari==0.7.0",
    "numpy==2.2.6",
    "PyQt6",
    "opencv-python",
    "scikit-image",
    "scipy",
    "pyinstaller==6.16.0",
    "torch==2.2.2; platform_system == \"Darwin\" and platform_machine == \"x86_64\"",
    "torch==2.8.0; platform_system != \"Darwin\" or platform_machine != \"x86_64\"",
    "torchvision==0.17.2; platform_system == \"Darwin\" and platform_machine == \"x86_64\"",
    "torchvision; platform_system != \"Darwin\" or platform_machine != \"x86_64\"",
]

[project.scripts]
leaf-contour-efd = "leaf_shape_tool.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyinstaller==6.16.0",
    "build",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
leaf-contour-efd = { workspace = true }
